Start of clinic setup functionality

--- a/Pages/AppModify.cshtml
+++ b/Pages/AppModify.cshtml
@@ -125,7 +125,8 @@
 
     function GoBack()
     {
-        window.close();
+        //window.close();
+        window.location.replace("Index");
     }
 
     function HideMenu()
